--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -35,6 +35,7 @@
             </div>
             <div id="meetingListDiv" data-win-control="WinJS.UI.ListView" 
                  data-win-options="{itemDataSource: nwvdnugApp.MeetingList.dataSource, 
+                selectionMode: WinJS.UI.SelectionMode.none,
                 itemTemplate: select('#meetingTemplate'), layout: {type: WinJS.UI.GridLayout} }">
             </div>
         </section>
