--- a/pages/details/details.html
+++ b/pages/details/details.html
@@ -1,28 +1,35 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>details</title>
+	<meta charset="utf-8" />
+	<title>details</title>
 
-    <!-- WinJS references -->
-    <link href="//Microsoft.WinJS.1.0/css/ui-dark.css" rel="stylesheet" />
-    <script src="//Microsoft.WinJS.1.0/js/base.js"></script>
-    <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
+	<!-- WinJS references -->
+	<link href="//Microsoft.WinJS.1.0/css/ui-dark.css" rel="stylesheet" />
+	<script src="//Microsoft.WinJS.1.0/js/base.js"></script>
+	<script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
 
-    <link href="details.css" rel="stylesheet" />
-    <script src="details.js"></script>
+	<link href="details.css" rel="stylesheet" />
+	<script src="details.js"></script>
 </head>
 <body>
-    <div class="details fragment">
-        <header aria-label="Header content" role="banner">
-            <button class="win-backbutton" aria-label="Back" disabled type="button"></button>
-            <h1 class="titlearea win-type-ellipsis">
-                <span class="pagetitle">Meeting Info</span>
-            </h1>
-        </header>
-        <section aria-label="Main content" role="main">
-            <p>Content goes here.</p>
-        </section>
-    </div>
+	<div class="details fragment">
+		<header aria-label="Header content" role="banner">
+			<button class="win-backbutton" aria-label="Back" disabled type="button"></button>
+			<h1 class="titlearea win-type-ellipsis">
+				<span class="pagetitle">Meeting Info</span>
+			</h1>
+		</header>
+		<section aria-label="Main content" role="main">
+			<div class="meetingDetailHolder" id="meetingInfoDiv">
+				<div class="meetingTitle" data-win-bind="innerText: Title"></div>
+				<div class="meetingDate" data-win-bind="innerText: MeetingStartTime"></div>
+				<div class="meetingLocation" data-win-bind="innerText: Location"></div>
+				<div class="meetingSpeakerName" data-win-bind="innerText: SpeakerName"></div>
+				<div class="meetingSpeakerLink" data-win-bind="innerText: SpeakerBioLink"></div>
+				<div class="meetingNotes" data-win-bind="innerText: Notes"></div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
